--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "webpack-dev-server": "^3.5.1"
   },
   "dependencies": {
+    "dayjs": "^1.8.14",
     "postcss-import": "^12.0.1"
   },
   "browserslist": [
