--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "spark frontend workflow",
   "main": "src/index.js",
   "scripts": {
+    "start:dev:server": "webpack-dev-server",
     "test": "jest test"
   },
   "repository": {
@@ -40,8 +41,8 @@
     "postcss-preset-env": "^6.6.0",
     "uglifyjs-webpack-plugin": "^2.1.3",
     "webpack": "^4.32.2",
-    "webpack-cli": "^3.3.2",
-    "webpack-dev-server": "^3.5.1"
+    "webpack-cli": "^3.3.11",
+    "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
     "dayjs": "^1.8.14",
