--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "src/index.js",
   "scripts": {
     "start:dev:server": "webpack-dev-server",
+    "start:prod": "webpack --mode production",
     "test": "jest test"
   },
   "repository": {
@@ -31,7 +32,7 @@
     "css-loader": "^2.1.1",
     "file-loader": "^3.0.1",
     "html-srcsets-loader": "^0.5.1",
-    "html-webpack-plugin": "^3.2.0",
+    "html-webpack-plugin": "^4.0.0-beta.14",
     "image-webpack-loader": "^5.0.0",
     "mini-css-extract-plugin": "^0.7.0",
     "normalize.css": "^8.0.1",
@@ -46,6 +47,7 @@
   },
   "dependencies": {
     "dayjs": "^1.8.14",
+    "html-webpack-inline-i18n-plugin": "^1.0.0",
     "postcss-import": "^12.0.1"
   },
   "browserslist": [
